# telegram-wiki

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml
scripts/: com.telegramwiki.daily.plist
src/telegram_wiki/: __init__.py  app.py  cli.py  config.py  crud.py  ingest.py  pipeline_runner.py  telethon_service.py  url_redact.py  utc.py  vault.py  wiki_llm.py
src/telegram_wiki/db/: __init__.py  models.py  session.py
src/telegram_wiki/templates/: control_room.html  dashboard.html
telegram_raw/.obsidian/: workspace.json
tests/: test_control_room.py  test_vault.py
