[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-wiki"
version = "0.1.0"
description = "Telegram ingest → company groups → Karpathy-style LLM wiki in Obsidian"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.36.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.12.5",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "openai>=1.55.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "pytest-timeout>=2.3.0"]

[project.scripts]
telegram-wiki = "telegram_wiki.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 120
pythonpath = ["src"]
